--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/repos/v16
+/.vs/repos/config
+/.vs/ProjectSettings.json
